--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,7 +2,7 @@
 
 @import 'normalize.css';
 @import './modules/box-sizing.css';
-@import './modules/html-body-reset.css';
+@import './modules/reset.css';
 
 @import './modules/form.css';
 
