--- a/src/assets/css/modules/position.css
+++ b/src/assets/css/modules/position.css
@@ -6,6 +6,21 @@
   position: absolute;
 }
 
+:global .absolute-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+:global .absolute-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 :global .fixed {
   position: fixed;
 }
@@ -30,22 +45,22 @@
   bottom: 0;
 }
 
-:global .z1 {
+:global .z-1 {
   z-index: 1;
 }
 
-:global .z2 {
+:global .z-2 {
   z-index: 2;
 }
 
-:global .z3 {
+:global .z-3 {
   z-index: 3;
 }
 
-:global .z4 {
+:global .z-4 {
   z-index: 4;
 }
 
-:global .z999 {
+:global .z-999 {
   z-index: 999;
 }
